import arch from json and solve gaps

--- a/src/components/HomePage/Architecture/Architecture.css
+++ b/src/components/HomePage/Architecture/Architecture.css
@@ -16,7 +16,7 @@
     align-content: stretch;
 }
 
-.home-page#architecture content .arch-list > div {
+.home-page#architecture content .arch-list .architecture {
     margin: 15px 0 25px;
     display: flex;
     flex-direction: row;
@@ -25,7 +25,7 @@
     color: #fff;
 }
 
-.home-page#architecture content .arch-list > div > i {
+.home-page#architecture content .arch-list .architecture > i {
     display: flex;
     flex: 0 0 auto;
     line-height: 34px;
@@ -38,11 +38,11 @@
     transition: color 0.5s ease-in-out;
 }
 
-.home-page#architecture content .arch-list > div:hover > i {
+.home-page#architecture content .arch-list .architecture:hover > i {
     color: #019bf0;
 }
 
-.home-page#architecture content .arch-list > div > .text {
+.home-page#architecture content .arch-list .architecture > .text {
     display: flex;
     width: auto;
     flex-direction: column;
@@ -50,7 +50,7 @@
     font-size: 13px;
 }
 
-.home-page#architecture content .arch-list > div > .text > h3 {
+.home-page#architecture content .arch-list .architecture > .text > h3 {
     font-size: 18px;
     line-height: 34px;
     font-weight: lighter;
@@ -58,7 +58,7 @@
     color: #fafafa;
 }
 
-.home-page#architecture content .arch-list > div > .text > ul > li {
+.home-page#architecture content .arch-list .architecture > .text ul > li {
     list-style-type: circle;
     margin-left: 20px;
     padding-left: 4px;
